# TechOS

./: .gitignore  CMakeLists.txt  README.md  TechOS  accounts.txt  execute
help/: addadmin.txt  adduser.txt  blockpcb.txt  cd.txt  changepassword.txt  clear.txt  createpcb.txt  deletepcb.txt  dispatchpcbs.txt  exit.txt  help.txt  loadpcb.txt  ls.txt  mkdir.txt  removeadmin.txt  removeuser.txt  resumepcb.txt  rm.txt  rmdir.txt  setdate.txt  setpcbpriority.txt  showallpcbs.txt  showblockedpcbs.txt  showdate.txt  showpcb.txt  showreadypcbs.txt  showtime.txt  summary.txt  suspendpcb.txt  touch.txt  unblockpcb.txt  version.txt
include/: auth.h  color_library.h  comhan.h  commands.h  dispatcher.h  pcb.h  queue.h  utils.h
src/: auth.c  comhan.c  commands.c  dispatcher.c  execute.c  main.c  pcb.c  queue.c  utils.c
